[Fix][Chore] Start parameter compatible JDK version(8-17) (#229)